# Minecraft-Bedrock-auto-Bot

./: .gitignore  BUILD.md  CMakeLists.txt  README.md  bot.py  requirements.txt
src/: bot.cpp  bot.h  gui.cpp  gui.h  main.cpp  ocr.h  parser.cpp  parser.h  screen_capture.cpp  screen_capture.h  state_machine.h  utils.cpp  utils.h
